<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueMain"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Maintitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:textColor="@color/blackblueSecondary"
        android:textSize="30sp"

        tools:layout_editor_absoluteX="133dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idea"
        android:textColor="@color/blackblueSecondary"
        android:textSize="25sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="138dp" />

    <Button
        android:id="@+id/but1"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView"


        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-4dp"
        android:layout_marginEnd="217dp"
        android:layout_marginRight="217dp"
        android:layout_marginBottom="358dp"
        android:backgroundTint="@color/red"
        android:text="@string/but1"
        android:textColor="@color/blackblueSecondary" />

</RelativeLayout>