<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackblueSecondary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/cycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginEnd="232dp"
        android:layout_marginRight="232dp"
        android:layout_marginBottom="691dp"
        android:layout_toEndOf="@+id/Ameba"
        android:layout_toRightOf="@+id/Ameba"
        android:text="@string/cycle"
        android:textColor="@color/grey"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:id="@+id/Ameba"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/dis1"
        app:srcCompat="@drawable/Ameba"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="133dp" />

    <ImageView
        android:id="@+id/Food"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/dis2"
        app:srcCompat="@drawable/food"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="216dp"
        tools:layout_editor_absoluteY="222dp" />

    <ImageButton
        android:id="@+id/setting"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/dis1"
        android:scaleType="centerCrop"
        android:src="@drawable/setting3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cycle"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008"
        tools:ignore="DuplicateSpeakableTextCheck"></ImageButton>


</RelativeLayout>